Separate song info box and queue list Fix position of song info box and control buttons (don't scroll out of screen)

--- a/htdocs/css/mpd.css
+++ b/htdocs/css/mpd.css
@@ -27,7 +27,6 @@ button {
 
 #breadcrump {
   display: block;
-
   overflow: auto;
   white-space: nowrap;
 }
@@ -164,4 +163,9 @@ button {
   cursor: default;
   text-decoration: none;
   color: black;
+}
+
+.sticky {
+  position: sticky;
+  top: 55px;
 }
